--- a/HW1/style.css
+++ b/HW1/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hero {
-    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.7)), url(/HW1/imgs/Underthings.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.7)), url(HW1/imgs/Underthings.jpg);
     height: 50%;
     background-position: center;
     background-repeat: no-repeat;
@@ -31,7 +31,7 @@ body {
   background-color: #9cb7e3;
 }
 
-.favorites {
+.games {
   max-width: 80%;
   border: 2px solid #333333;
   padding: 20px;
